Thu May 29 05:05:29 2014  Eric Wong  <e@80x24.org>

	* include/ruby/ruby.h: Hide Symbol internals.
	  (struct RSymbol): moved to internal.h
	  (RSYMBOL): ditto

Thu May 29 00:28:56 2014  Tanaka Akira  <akr@fsij.org>

	* ext/socket/unixsocket.c (rsock_init_unixsock): Open a socket
	  after path length check.
	  This fixes a fd leak by TestSocket_UNIXSocket#test_too_long_path.

Wed May 28 23:04:35 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_io.rb (test_flush_in_finalizer1): Use
	  ObjectSpace.each_object to close files.
	  GC.start is not reliable.

Wed May 28 19:00:31 2014  Tanaka Akira  <akr@fsij.org>

	* lib/net/imap.rb (Net::IMAP#initialize): Close the opened socket when
	  any exception occur.
	  This fixes a fd leak by IMAPTest#test_imaps_post_connection_check
	  which start_tls_session() raises an exception.

Wed May 28 18:06:13 2014  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_close): Fix sync_close to work
	  when SSL is not started.
	  This fix the fd leak by test_https_proxy_authentication in
	  test/net/http/test_https_proxy.rb.

Wed May 28 10:29:28 2014  Eric Wong  <e@80x24.org>

	* vm.c (rb_vm_living_threads_foreach): remove function
	  [ruby-core:62745]
	* thread.c (terminate_i): remove
	* thread.c (terminate_all): implement (inlines old terminate_i)
	* thread.c (rb_thread_terminate_all): use terminate_all
	* thread.c (rb_thread_fd_close_i): remove
	* thread.c (rb_thread_fd_close): iterate inline
	* thread.c (thread_list_i): remove
	* thread.c (rb_thread_list): iterate inline
	* thread.c (rb_thread_atfork_internal): iterate inline
	* thread.c (terminate_atfork_i): update types to remove casts
	* thread.c (terminate_atfork_before_exec_i): ditto
	* thread.c (struct thgroup_list_params): remove definition
	* thread.c (thgroup_list_i): remove
	* thread.c (thgroup_list): iterate inline
	* thread.c (check_deadlock_i): remove
	* thread.c (debug_deadlock_check): implement (inlines check_deadlock_i)
	* thread.c (debug_i): remove